@@ -105,10 +105,13 @@ shows the label of the current point; simply enter or change text in this box.
 These items may be used to control the section-to-section ghost display mode.
 Use the spin box to set the maximum number of sections that contours will be
 displayed as ghosts on.  For example, with a value of 3, contours will be
-displayed as ghosts from up to 3 sections away.  If the <B>Up</B> box is
+displayed as ghosts from up to 3 sections away.  With the special value of 
+"Near", ghost contours will be displayed from the nearest section on which the
+object has contours.  If the <B>Up</B> box is
 checked, then contours will be displayed as ghosts on following sections; the
-<B>Down</B> check box will display contours as ghosts on previous sections.  The
-<B>g</B> hot key will toggle the combination selected by these boxes on and off.
+<B>Down</B> check box will display contours as ghosts on previous sections.
+The <B>g</B> hot key will toggle the combination selected by these boxes on
+and off.
 <P>
 If <B>Lighter</B> box is checked, the ghost contours will be displayed in a
 lighter color, otherwise they will be drawn with a darker color.  If the
